--- a/Exercício Avaliativo 02 - JavaScript/Questao_01/paginaWeb.html
+++ b/Exercício Avaliativo 02 - JavaScript/Questao_01/paginaWeb.html
@@ -7,26 +7,35 @@
     <link rel="stylesheet" href="stylePaginaWeb.css">
 </head>
 <body>
-
-<header>
-
-</header>
+<header></header>
 
 <div id="AlinhamentoPrincipal">
-<nav>
+<nav class="menuNav">
+    <ul>
+        <li>Institucional
+            <ul>
+                <li>Localização</li>
+                <li>Estrutura</li>
+            </ul>
+        </li>
 
-    Institucional
-    Produtos 
-    Sobre
+        <li>Produtos
+            <ul>
+                <li>Notebooks</li>
+                <li>Celulares</li>
+                <li>Eletrodomésticos</li>
+            </ul>
+        </li>
 
+        <li>Sobre
+            <ul>
+                <LI>Contato</LI>
+            </ul>
+        </li>
+    </ul>
 </nav>
 
-<main>
-<strong>Conteúdo principal</strong><br><br>
-
-</main>
-</div>
-
-    
+<main></main>
+</div>  
 </body>
 </html>
