--- a/Exercício Avaliativo 02 - JavaScript/Questao_01/paginaWeb.html
+++ b/Exercício Avaliativo 02 - JavaScript/Questao_01/paginaWeb.html
@@ -29,7 +29,7 @@
 
         <li>Sobre
             <ul>
-                <LI>Contato</LI>
+                <LI><a href="https://www.instagram.com/helio_potelicky/">Contato</a></LI>
             </ul>
         </li>
     </ul>
