--- a/Exercício Avaliativo 02 - JavaScript/Questao_03/ListaNaoOrdenada.html
+++ b/Exercício Avaliativo 02 - JavaScript/Questao_03/ListaNaoOrdenada.html
@@ -25,7 +25,7 @@
     <header>
         <script>
             var frutas = ['Abacate', 'Araçá', 'Carambola', 'Groselha', 'Maçã', 'Zimbro']
-            document.write('Array de Frutas: [' + frutas + ']')
+            document.write(`Array de Frutas: [${frutas}]`)
         </script>
     </header>
 
