--- a/Trabalho T2/Parte 02/TelaPrincipal.html
+++ b/Trabalho T2/Parte 02/TelaPrincipal.html
@@ -17,5 +17,41 @@
             </script>
     </header>
 
+    <nav class="menuNavSUP">
+        <ul>
+            <li><a href="TelaPrincipal.html">Início</a>
+            </li>
+    
+            <li><a href="https://www.blumenau.sc.gov.br/">Blumenau</a>
+            </li>
+
+            <li><a href="TelaPrincipal.html">Nível do Rio</a>              
+            </li>
+
+            <li><a href="TelaPrincipal.html">Últimas Leituras</a>
+            </li>
+
+            <li><a href="TelaPrincipal.html">Mapa</a>              
+            </li>
+        </ul>
+    </nav>
+
+    <nav class="menuNavINF">
+        <ul>
+            <li><a href="TelaPrincipal.html">Previsão</a>
+            </li>
+    
+            <li><a href="https://www.blumenau.sc.gov.br/">Defesa Civil</a>
+            </li>
+
+            <li><a href="TelaPrincipal.html">Contato</a>  
+                <ul>
+                    <li><a href="TelaFormulario.html">Fale Conosco</a></li>
+                    <li><a href="https://www.instagram.com/helio_potelicky/">Criador</a></li>
+                </ul>            
+            </li>
+        </ul>
+    </nav>
+
 </body>
 </html>
