--- a/Trabalho T2/Parte 02/TelaPrincipal.html
+++ b/Trabalho T2/Parte 02/TelaPrincipal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleTelaPrincipal.css">
+    <link rel="stylesheet" href="styleMain.css">
     <title>Itaj.AI</title>
 </head>
 <body>
@@ -42,6 +42,9 @@
             </li>
     
             <li><a href="https://www.blumenau.sc.gov.br/">Defesa Civil</a>
+                <ul>
+                    <li><a href="Abrigos.html">Abrigos</a></li>
+                </ul> 
             </li>
 
             <li><a href="TelaPrincipal.html">Contato</a>  
@@ -52,6 +55,5 @@
             </li>
         </ul>
     </nav>
-
 </body>
 </html>
