--- a/Trabalho T2/Parte 02/Default.html
+++ b/Trabalho T2/Parte 02/Default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleMain.css">
-    <title>Itaj.AI</title>
+    <title>Default</title>
 </head>
 <body>
     
@@ -26,23 +26,23 @@
             <li><a href="https://www.blumenau.sc.gov.br/">Blumenau</a>
             </li>
 
-            <li><a href="#forecastingSelected">Previsão</a>
+            <li><a href="TelaPrincipal.html">Previsão</a>
             </li>
 
-            <li><a href="#GoogleMaps">Mapa</a>              
+            <li><a href="TelaPrincipal.html">Mapa</a>              
             </li>
         </ul>
     </nav>
 
     <nav class="menuNavINF">
         <ul>    
-            <li>Defesa Civil</a>
+            <li><a href="https://www.blumenau.sc.gov.br/">Defesa Civil</a>
                 <ul>
                     <li><a href="Abrigos.html">Abrigos</a></li>
                 </ul> 
             </li>
 
-            <li>Contato</a>  
+            <li><a href="TelaPrincipal.html">Contato</a>  
                 <ul>
                     <li><a href="TelaFormulario.html">Fale Conosco</a></li>
                     <li><a href="https://www.instagram.com/helio_potelicky/">Criador</a></li>
@@ -50,24 +50,6 @@
             </li>
         </ul>
     </nav>
-
-    <main>
-        <div id="forecastingSelected">
-            <iframe id="forecasting" src="BlumenauIFrame.html" width="1000" height="500"></iframe>
-        </div>
-
-        <div id="GoogleMaps">
-            <iframe 
-                width="100%" 
-                height="600" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Blumenau+(Blumenau)&amp;ie=UTF8&amp;t=h&amp;z=12&amp;iwloc=B&amp;output=embed"
-                frameborder="0" 
-                scrolling="no" 
-                marginheight="0" 
-                marginwidth="0">
-                <a href="https://www.maps.ie/draw-radius-circle-map/">Radius map tool</a>
-            </iframe>
-         </div>
-    </main>
 
     <footer>
         <br>Site em desenvolvimento por Hélio Potelicki, Victor Konder - CEP: 89012.510 - Blumenau/SC - Brasil
