--- a/Trabalho T2/Parte 02/TelaPrincipal.html
+++ b/Trabalho T2/Parte 02/TelaPrincipal.html
@@ -7,7 +7,6 @@
     <title>Itaj.AI</title>
 </head>
 <body>
-    
     <header>
         Sistema de Monitoramento e Alerta<br>de Eventos Extremos de Blumenau
         <button id="LoginBT" class="LoginBT"></button>
@@ -52,21 +51,23 @@
     </nav>
 
     <main>
-        <div id="forecastingSelected">
-            <iframe id="forecasting" src="BlumenauIFrame.html" width="1000" height="500"></iframe>
+        <div class="mainBackground">
+            <div id="forecastingSelected">
+                <iframe id="forecasting" src="BlumenauIFrame.html" width="1000" height="500" frameborder="4" ></iframe>
+            </div>
         </div>
 
         <div id="GoogleMaps">
             <iframe 
-                width="100%" 
-                height="600" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Blumenau+(Blumenau)&amp;ie=UTF8&amp;t=h&amp;z=12&amp;iwloc=B&amp;output=embed"
-                frameborder="0" 
+                width="1000px" 
+                height="600px" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Blumenau+(Blumenau)&amp;ie=UTF8&amp;t=h&amp;z=12&amp;iwloc=B&amp;output=embed"
+                frameborder="4" 
                 scrolling="no" 
                 marginheight="0" 
                 marginwidth="0">
-                <a href="https://www.maps.ie/draw-radius-circle-map/">Radius map tool</a>
+                <a href="https://www.maps.ie/draw-radius-circle-map/"></a>
             </iframe>
-         </div>
+        </div>
     </main>
 
     <footer>
@@ -74,6 +75,5 @@
         <br>Contato: (47) 99621-0308 - Email: helio.p2000@hotmail.com
         <br>Horário de Atendimento: das 18h30 às 22h00
     </footer>
-
 </body>
 </html>
