--- a/Trabalho T2/Parte 02/Abrigos.html
+++ b/Trabalho T2/Parte 02/Abrigos.html
@@ -25,10 +25,10 @@
             <li><a href="https://www.blumenau.sc.gov.br/">Blumenau</a>
             </li>
 
-            <li><a href="#forecastingSelected">Previsão</a>
+            <li><a href="TelaPrincipal.html #forecastingSelected">Previsão</a>
             </li>
 
-            <li><a href="#GoogleMaps">Mapa</a>              
+            <li><a href="TelaPrincipal.html #GoogleMaps">Mapa</a>              
             </li>
         </ul>
     </nav>
