--- a/Trabalho T3/index.html
+++ b/Trabalho T3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empregados</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
     <script>
@@ -12,8 +13,38 @@
             window.location.reload();
         }
 
-        function aparece() {
+        function aparece(id) {
             document.getElementById('EscondeEditor').style.cssText = 'visibility: visible;';
+
+            var xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function() {
+                var dataReturned = JSON.parse(this.responseText);
+                $("#nomeEdit").val(dataReturned.data.employee_name);
+                $("#salarioEdit").val(dataReturned.data.employee_salary);
+                $("#idadeEdit").val(dataReturned.data.employee_age);
+                $("#avatarEdit").val(dataReturned.data.profile_image);
+            };
+            xhttp.open("GET", "http://rest-api-employees.jmborges.site/api/v1/employee/" + id, true);
+            xhttp.setRequestHeader("Content-type", "application/json");
+            xhttp.send();
+
+            $("#UpdateEmpregado").on("click",function() {  
+                var url = 'http://rest-api-employees.jmborges.site/api/v1/update/' + id;
+                var xhttp = new XMLHttpRequest();
+                xhttp.open("PUT", url, false);
+                xhttp.setRequestHeader("Content-type", "application/json");
+
+                var updateEmpregado = {
+                    name: document.getElementById("nomeEdit").value,
+                    salary: document.getElementById("salarioEdit").value,
+                    age: document.getElementById("idadeEdit").value,
+                    profile_image: document.getElementById("avatarEdit").value
+                };
+
+                xhttp.send(JSON.stringify(updateEmpregado)); 
+
+                autoRefresh()
+            });
         }
 
         function esconde() {
@@ -21,16 +52,16 @@
         }
 
         function confirmacaoExcluirAP(id) {
-            console.log("-> " + id + " <-");
             document.getElementById('AlertaExcluir').style.cssText = 'visibility: visible;';
 
-            function excluir() {
-                excluir(this);
-            }
+            $("#confirmaExcluiu").on("click",function() {  
+                var url = 'http://rest-api-employees.jmborges.site/api/v1/delete/' + id;
+                var xhttp = new XMLHttpRequest();
+                xhttp.open("DELETE", url, false);
+                xhttp.setRequestHeader("Content-type", "application/json");
+                xhttp.send();
+            });
 
-            function excluir(id){
-                console.log(id + ' Apagado');
-            }
         }
 
         function confirmacaoExcluirDSP() {
@@ -91,7 +122,7 @@
                     if (j == col.length-1){
                         var tabCell = tr.insertCell(-1);
                         var id = String(myData[i][col[0]]);
-                        var aux = String('<a onclick="aparece()">Editar</a> | <a onclick="confirmacaoExcluirAP(\'' + id + '\');">Excluir</a>');
+                        var aux = String('<a onclick="aparece(\'' + id + '\')">Editar</a> | <a onclick="confirmacaoExcluirAP(\'' + id + '\');">Excluir</a>');
                         tabCell.innerHTML = aux;
                     }
                 }
@@ -111,7 +142,7 @@
             }
         };
 
-        xhttp.open("GET", "https://us-central1-rest-api-employees.cloudfunctions.net/api/v1/employees", true);
+        xhttp.open("GET", "http://rest-api-employees.jmborges.site/api/v1/employees", true);
         xhttp.setRequestHeader("Content-type", "application/json");
         xhttp.send();
 
@@ -125,7 +156,7 @@
                 }
             };
 
-            xhttp.open("POST", "https://us-central1-rest-api-employees.cloudfunctions.net/api/v1/create", true);
+            xhttp.open("POST", "http://rest-api-employees.jmborges.site/api/v1/create", true);
             xhttp.setRequestHeader("Content-type", "application/json");
 
             var NewEmpregado = {
@@ -203,7 +234,7 @@
                 </div>
         
                 <div id="BTNNovoEmpregado" class="BTNNovoEmpregado">
-                    <button type="submit" value="Submit" class="FormBTNS" onclick="saveInputs()">Salvar</button>
+                    <button id="UpdateEmpregado" type="submit" value="Submit" class="FormBTNS">Salvar</button>
                     <button type="reset"  value="Reset" class="FormBTNS" onclick="clearInputsEdit()">Cancelar</button>
                 </div>
             </div>
@@ -214,7 +245,7 @@
         <form class="AlertaExcluir">
           <h3>Deseja realmente excluir este empregado?</h3>
           <div id="BTNExcluir" class="BTNExcluir">
-            <button type="submit" value="Submit" class="FormBTNS" onclick="excluir()">Confirmar</button>
+            <button id="confirmaExcluiu" type="submit" value="Submit" class="FormBTNS">Confirmar</button>
             <button type="reset"  value="Reset" class="FormBTNS" onclick="confirmacaoExcluirDSP()">Cancelar</button>
           </div>
         </form>
